\name{EpiDISHnews}
\title{EpiDISH News}
\encoding{UTF-8}


\section{Version 2.0.0}{
  \itemize{
    \item Add CellDMC and hepidish functions.
  }
}


\section{Version 0.99.0}{
  \itemize{
    \item Initial submission to Bioconductor.
    \item Added NEWS file.
    \item Added constraint mode parameter in CP mode.
  }
}