@@ -2,6 +2,11 @@
 \title{EpiDISH News}
 \encoding{UTF-8}
 
+\section{Version 2.15.0}{
+  \itemize{
+    \item Add 12 blood cell-type DNAm reference matrix for 450k and EPIC arrays.
+  }
+}
 
 \section{Version 2.0.0}{
   \itemize{
